# soundcloud-archive-site

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: database.rs  lib.rs  main.rs  test.rs
frontend/: Body.js  Global.js  Graphics.js  Login.js  NewUser.html  NewUser.js  SC_Oauth.html  User_Playlist.html  User_Songs.html  html.js  index.html  index.js  package-lock.json  package.json  rollup.config.js
frontend/_pgbackup/: Global_1582838448.js  Global_1582839238.js  Global_1582839299.js  Global_1582839365.js  Global_1582839475.js  Global_1582839494.js  Global_1582839516.js  NewUser_1582828678.html  NewUser_1582830182.html  NewUser_1582837835.html  User_Playlist_1582838175.html  User_Songs_1582831229.html  User_Songs_1582838170.html  User_Songs_1582838265.html  User_Songs_1582838407.html  index_1582826359.html  index_1582826596.html  index_1582831679.html  index_1582836347.js  pinegrow_1582829815.json  pinegrow_1582829840.json  pinegrow_1582829858.json  pinegrow_1582830182.json  pinegrow_1582831235.json  pinegrow_1582831238.json  pinegrow_1582831679.json  pinegrow_1582836342.json  pinegrow_1582838170.json  pinegrow_1582838175.json  pinegrow_1582838765.json  user_1582830180.html  user_1582831232.html
frontend/public/: index.html
frontend/src/: About.svelte  AboutYou.svelte  App.svelte  Dashboard.svelte  Ian.svelte  Index.svelte  Jarek.svelte  Login.svelte  PlaylistsList.svelte  Register.svelte  ScCredentials.svelte  TracksList.svelte  stores.js  util.js
json-structs/: Cargo.toml
json-structs/src/: lib.rs
