[package]
name = "soundcloud-archive-site"
version = "0.1.0"
authors = ["Cldfire"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "backend"
path = "backend/src/main.rs"

[lib]
name = "scas_json"
path = "backend/src/lib.rs"

[dependencies]
rocket = "0.4"
rocket_contrib = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
postgres = "0.17"
dotenv = "0.15"
