[package]
name = "backend"
version = "0.1.0"
authors = ["Cldfire"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = "0.4"
serde_json = "1.0"
postgres = "0.17"
dotenv = "0.15"
argonautica = "0.2.0"
json-structs = { path = "../json-structs" }
