[package]
name = "backend"
version = "0.1.0"
authors = ["Cldfire"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git" }
serde_json = "1.0"
postgres = "0.17"
dotenv = "0.15"
argonautica = "0.2.0"
json-structs = { path = "../json-structs" }
orange-zest = { git = "https://github.com/Cldfire/orange-zest.git" }
